cleaned up html, changed css, bug created that shows whitespace above and below center hero background.

--- a/css/personal_page_styling.css
+++ b/css/personal_page_styling.css
@@ -1,6 +1,5 @@
 body {
     color: white;
-    background-color: black;
     margin: 0;
     padding: 0 0 0 0;
     font-size: 1.5em;
